<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Oigoiania</string>
    <string name="action_settings">Settings</string>
    <string name="heading_text_size">30sp</string>
    <string name="search">Search</string>
    <string name="searchfor">Search :</string>
    <string name="today">Today</string>
    <string name="promotions">Promotions</string>
    <string name="news">News</string>
    <string name="categories">Categories</string>
    <string name="contact">Contact</string>
    <string name="todaypromotions">Today Promotions</string>
    <string name="todayevents">Today Events</string>
    <string name="oigoinia">OI GOIANIA</string>
    <string name="imgdescription">It is tem image description</string>
    <string name="map">Map</string>
    <string name="address">Address:</string>
    <string name="businesshours">Business hours</string>
    <string name="telephone">Telephone:</string>
    <string name="nocomment">No review or evaluation done so far.</string>
    <string name="noimage">No image registered.</string>
    <string name="rating_reviews">Ratings and Reviews</string>
    <string name="about">About</string>
    <string name="event">Events</string>
    <string name="distance">Distance:</string>
    <string name="setdistane">Set Distance</string>
    <string name="send">Send</string>
    <string name="sendmessage">Send your Message</string>
    <string name="message">Message</string>
     <string name="name">Name</string>
    <string name="photos">Fotos</string>

</resources>