<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/heading_bg"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/heading_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/oigoinia"
            android:textColor="@color/heading_Text"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:gravity="center" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" >

            <RelativeLayout
                android:id="@+id/rl_research"
                android:layout_width="150dp"
                android:layout_height="110dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/img_research"
                    android:gravity="center"
                    android:text="@string/search"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_research"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/imgdescription"
                    android:src="@drawable/search" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_today"
                android:layout_width="150dp"
                android:layout_height="110dp"
                android:layout_toRightOf="@+id/rl_research" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_today"
                    android:gravity="center"
                    android:text="@string/today"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_today"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/imgdescription"
                    android:gravity="center_vertical"
                    android:src="@drawable/today" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_promotions"
                android:layout_width="150dp"
                android:layout_height="110dp"
                android:layout_below="@+id/rl_research"
                android:layout_marginTop="15dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_promotions"
                    android:gravity="center"
                    android:text="@string/promotions"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_promotions"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/imgdescription"
                    android:src="@drawable/promotions" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_news"
                android:layout_width="150dp"
                android:layout_height="110dp"
                android:layout_alignTop="@+id/rl_promotions"
                android:layout_below="@+id/rl_today"
                android:layout_toRightOf="@+id/rl_promotions" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_news"
                    android:gravity="center"
                    android:text="@string/news"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_news"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/imgdescription"
                    android:src="@drawable/news" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_categories"
                android:layout_width="150dp"
                android:layout_height="110dp"
                android:layout_below="@+id/rl_promotions"
                android:layout_marginTop="15dp" >

                <ImageView
                    android:id="@+id/img_categories"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/imgdescription"
                    android:src="@drawable/categories" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_categories"
                    android:gravity="center"
                    android:text="@string/categories"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_contact"
                android:layout_width="150dp"
                android:layout_height="110dp"
                android:layout_alignTop="@+id/rl_categories"
                android:layout_below="@+id/rl_news"
                android:layout_toRightOf="@+id/rl_categories" >

                <ImageView
                    android:id="@+id/img_contact"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/imgdescription"
                    android:src="@drawable/contact" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_contact"
                    android:gravity="center"
                    android:text="@string/contact"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>